# MedVision

./: .gitignore  LICENSE  MANIFEST.in  MedVision-README.md  README.md  pyproject.toml
Report/: ProjectReport.md
dockerfile/: Dockerfile.base  Dockerfile.eval_gemini  Dockerfile.eval_gemma3  Dockerfile.eval_healthgpt  Dockerfile.eval_huatuogptvision  Dockerfile.eval_internvl3  Dockerfile.eval_lingshu  Dockerfile.eval_llama3vision  Dockerfile.eval_llavamed  Dockerfile.eval_llavaonevision  Dockerfile.eval_meddr  Dockerfile.eval_medgemma  Dockerfile.eval_qwen25vl  Dockerfile.eval_qwen25vl_update1  Dockerfile.sft_qwen25vl
docs/: MedVision-Dataset-Tutorial.md  New-Models-Guide.md  New-Tasks-Guide.md  SFT_Tutorial.md  SFT_model_checkpoints.md  debug_env_setup.md  file-structure.md
requirements/: requirements_eval_gemini25.txt  requirements_eval_gemma3.txt  requirements_eval_healthgpt.txt  requirements_eval_huatuogpt_vision.txt  requirements_eval_internvl3.txt  requirements_eval_lingshu.txt  requirements_eval_llama3_vision.txt  requirements_eval_llava_onevision.txt  requirements_eval_llavamed.txt  requirements_eval_meddr.txt  requirements_eval_medgemma.txt  requirements_eval_qwen25vl.txt  requirements_eval_qwen25vl_transformers453.txt  requirements_eval_qwen25vl_update1.txt  requirements_sft_medgemma.txt  requirements_sft_qwen25vl.txt
tasks_list/: tasks_MedVision-AD-336x336.json  tasks_MedVision-AD-560x560.json  tasks_MedVision-AD-896x896.json  tasks_MedVision-AD-CoT-woInstruct.json  tasks_MedVision-AD-CoT.json  tasks_MedVision-AD-OOD.json  tasks_MedVision-AD-VP.json  (+29 more)
(+2062 files in other folders)
