[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medvision_bm"
dynamic = ["version"]
description = "medvision_bm: a codebase for the MedVision benchmark"
requires-python = ">=3.9"
authors = [{ name = "Yongcheng Yao", email = "yc.yao@ed.ac.uk" }]
license = { text = "CC-BY-NC 4.0" }
dependencies = [
    "datasets==3.6.0",
    "huggingface_hub==0.36.0",
    "nibabel",
]

[project.urls]
"License" = "https://creativecommons.org/licenses/by-nc/4.0/"
"Homepage" = "https://medvision.github.io"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["medvision_bm*"]

[project.optional-dependencies]

# Include the vendored source as data (copied into site-packages)
[tool.setuptools.package-data]
"medvision_bm" = ["medvision_lmms_eval/**", "medvision_lmms_eval/**/*", "medvision_lmms_eval/**/.*"]

[tool.setuptools.dynamic]
version = { attr = "medvision_bm.__version__" }